--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,9 @@ jobs:
           VITE_FOOTBALL_API_KEY: ${{ secrets.VITE_FOOTBALL_API_KEY }}
         run: npm run build
       
+      - name: Copy index.html to 404.html for SPA routing
+        run: cp dist/index.html dist/404.html
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
